code refactor for commandline to prepare for new features

--- a/RemotePotato0.vcxproj
+++ b/RemotePotato0.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="RemotePotato0.cpp" />
     <ClCompile Include="RogueOxidResolver.cpp" />
     <ClCompile Include="RogueOxidResolver_s.c" />
+    <ClCompile Include="RPCCaptureServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HTTPCrossProtocolRelay.h" />
@@ -165,6 +166,7 @@
     <ClInclude Include="IStorageTrigger.h" />
     <ClInclude Include="RogueOxidResolver.h" />
     <ClInclude Include="RogueOxidResolver_h.h" />
+    <ClInclude Include="RPCCaptureServer.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="IStandardActivator.idl" />
