--- a/RemotePotato0.vcxproj
+++ b/RemotePotato0.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClCompile Include="HTTPCrossProtocolRelay.cpp" />
     <ClCompile Include="IStorageTrigger.cpp" />
+    <ClCompile Include="RelayLib.cpp" />
     <ClCompile Include="RemotePotato0.cpp" />
     <ClCompile Include="RogueOxidResolver.cpp" />
     <ClCompile Include="RogueOxidResolver_s.c" />
@@ -164,6 +165,7 @@
     <ClInclude Include="HTTPCrossProtocolRelay.h" />
     <ClInclude Include="IStandardActivator_h.h" />
     <ClInclude Include="IStorageTrigger.h" />
+    <ClInclude Include="RelayLib.h" />
     <ClInclude Include="RogueOxidResolver.h" />
     <ClInclude Include="RogueOxidResolver_h.h" />
     <ClInclude Include="RPCCaptureServer.h" />
