--- a/RemotePotato0.vcxproj.filters
+++ b/RemotePotato0.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="HTTPCrossProtocolRelay.cpp" />
     <ClCompile Include="RogueOxidResolver.cpp" />
     <ClCompile Include="RPCCaptureServer.cpp" />
+    <ClCompile Include="RelayLib.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IStorageTrigger.h" />
@@ -15,6 +16,7 @@
     <ClInclude Include="HTTPCrossProtocolRelay.h" />
     <ClInclude Include="IStandardActivator_h.h" />
     <ClInclude Include="RPCCaptureServer.h" />
+    <ClInclude Include="RelayLib.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="RogueOxidResolver.idl" />
